--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,24 @@
 * {
-  margin: 0 auto;
+  margin: 0;
   padding-inline-start: 0;
   box-sizing: border-box;
+}
+
+body {
+    background-color: rgb(200, 200, 200);
+}
+
+section {
+    margin-bottom: 1em;
+    display: flex;
+    justify-content: space-between;
+}
+
+#tweet-quote {
+    font-size: 25px;
+}
+
+#quote-box {
+    background-color: rgba(228, 228, 228, 0.38);
+    padding: 5em;
 }
